--- a/app/src/main/res/layout/activity_customize.xml
+++ b/app/src/main/res/layout/activity_customize.xml
@@ -21,6 +21,7 @@
     </android.support.design.widget.AppBarLayout>
 
     <RadioGroup
+        android:id="@+id/radiogroup"
         android:layout_width="157dp"
         android:layout_height="110dp"
         android:layout_alignParentStart="true"
